# adaptivegraph

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  debug_simulation.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docs/: API.md
examples/: advanced_routing.py  basic_routing.py  customer_support_agent.py
notebooks/: customer_support_demo.ipynb  interactive_demo.ipynb
src/adaptivegraph/: __init__.py  core.py  embedding.py  encoder.py  memory.py  policy.py  rewards.py
tests/: test_convergence.py  test_edge_cases.py  test_factory.py  test_persistence.py  test_rewards.py
