[project]
name = "adaptivegraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "langgraph>=0.2.0",
    "pytest",
    "matplotlib",
    "jupyter"
]

embed = [
    "sentence-transformers>=3.0.0",
]

faiss = [
    "faiss-cpu>=1.8.0",
]

all = [
    "adaptivegraph[embed,faiss]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
]
